--- a/etc/kubernetes/webui-svc.yaml
+++ b/etc/kubernetes/webui-svc.yaml
@@ -5,7 +5,9 @@ metadata:
 spec:
   ports:
     -
+      nodePort: 30000
       port: 80
       targetPort: 8080
   selector:
     app: webui
+  type: NodePort
